Update Testimonial Carousel

--- a/wp-content/plugins/plugaddons/assets/public/css/main.css
+++ b/wp-content/plugins/plugaddons/assets/public/css/main.css
@@ -180,6 +180,9 @@
 /*--------------------
 * Testimonials CSS
 --------------------*/
+
+
+
 .pla-testimonial-box {
     background-color: #fff;
     padding: 32px 28px;
@@ -763,12 +766,13 @@ Testimonial Carousel
     width: 106px;
     margin: 0 auto 10px;
 }
-
-.testimonial-carousel .pla-testimonial-box.pla-testimonial--style-two.slick-current .pla-testimonial-box-inner,
+.testimonial-carousel.style-two .slick-current.slick-active.slick-center .pla-testimonial-box-inner,
 .testimonial-carousel .pla-testimonial-box.pla-testimonial--style-two .pla-testimonial-box-inner:hover {
     background-color: #E62848;
 }
-
+.testimonial-carousel.style-two .slick-slide.slick-current.slick-active.slick-center{
+    margin-top: -50px;
+}
 .testimonial-carousel .pla-testimonial-box.pla-testimonial--style-two {
     position: relative;
     padding: 0;
