--- a/wp-content/plugins/plugaddons/assets/public/css/main.css
+++ b/wp-content/plugins/plugaddons/assets/public/css/main.css
@@ -1254,32 +1254,40 @@ Testimonial Carousel
     position: relative;
     overflow: hidden;
 }
+
 .pla-accordion-title.pla-accordion-title--1 {
     margin-top: 0 !important;
 }
+
 .pla-accordion-title h5 {
     margin: 0;
     display: inline-block;
     font-size: 14px;
     line-height: 1;
 }
+
 .accordion .pla-accordion-title .pla-accordion-icon {
     margin-top: 2px;
 }
+
 .accordion .pla-accordion-title .pla-accordion-icon.pla-accordion-icon-right {
     float: right;
     text-align: right;
 }
+
 .accordion .pla-accordion-title .pla-accordion-icon.pla-accordion-icon-left {
     float: left;
     text-align: left;
 }
+
 .single-accordion.open .pla-accordion-title .pla-accordion-icon .pla-accordion-icon-closed {
     display: none;
 }
+
 .single-accordion.closed .pla-accordion-title .pla-accordion-icon .pla-accordion-icon-opened {
     display: none;
 }
+
 .accordion .pla-accordion-title .pla-accordion-icon {
     display: inline-block;
     width: 1.5em;
@@ -1299,19 +1307,24 @@ Testimonial Carousel
     top: 0;
 
 }
-.pla-accordion-title.pla-accordion-title-number--left .pla-accordion-number{
+
+.pla-accordion-title.pla-accordion-title-number--left .pla-accordion-number {
     left: 0;
 
 }
-.pla-accordion-title.pla-accordion-title-number--right .pla-accordion-number{
+
+.pla-accordion-title.pla-accordion-title-number--right .pla-accordion-number {
     right: 0;
 }
-.pla-accordion-title.pla-accordion-title-number--right .pla-accordion-number{
+
+.pla-accordion-title.pla-accordion-title-number--right .pla-accordion-number {
     right: 0;
 }
+
 .pla-accordion-title.pla-accordion-title-number--left h5 {
     margin-left: 45px;
 }
+
 /*.pla-accordion-content{*/
 /*    opacity: 0;*/
 /*    visibility: hidden;*/
@@ -1322,30 +1335,33 @@ Testimonial Carousel
 /*}*/
 
 
-
-
 /*Team CSS*/
 
 .pla-team-box {
-    box-shadow: 0 1px 4px 0 rgba(9,30,66,.15);
+    box-shadow: 0 1px 4px 0 rgba(9, 30, 66, .15);
     border-radius: 10px;
     transition: all 0.3s ease-in-out;
     transform: translateY(0);
     overflow: hidden;
 }
+
 .pla-team-box:hover {
-    box-shadow: 0 8px 20px -7px rgba(9,30,66,.3);
+    box-shadow: 0 8px 20px -7px rgba(9, 30, 66, .3);
     transform: translateY(-4px);
 }
+
 .pla-team-area .row:last-child .pla-team-box {
     margin-bottom: 0;
 }
+
 .pla-team-box .pla-team-desc {
     padding: 55px 14px 22px;
 }
+
 .pla-team-box .pla-team-desc {
     padding: 32px 25px 30px;
 }
+
 .pla-team-box h5 {
     font-size: 16px;
     color: #686868;
@@ -1353,34 +1369,41 @@ Testimonial Carousel
     font-weight: 600;
     margin-bottom: -2.5px;
 }
+
 .pla-team-box span {
     font-size: 12px;
     color: #686868;
     font-weight: 400;
     display: block;
 }
+
 .pla-team-box p {
     font-size: 14px;
     line-height: 19px;
     color: #AAA6A6;
     margin: 0;
 }
+
 .pla-social {
     margin: 0;
     padding: 0;
 }
+
 .pla-social li {
     display: inline-block;
 }
+
 .pla-social li a {
     display: inline-block;
     color: #AAA6A6;
-    padding: 0  9px;
+    padding: 0 9px;
     font-size: 18px;
 }
-.pla-team-box.social-popup{
+
+.pla-team-box.social-popup {
     overflow: inherit;
 }
+
 .pla-team-box.social-popup .pla-social {
     display: inline-block;
     margin: 0;
@@ -1394,13 +1417,16 @@ Testimonial Carousel
     top: -60px;
     left: 20px;
 }
-.pla-team-box.social-popup .pla-social li a{
+
+.pla-team-box.social-popup .pla-social li a {
     color: #fff;
 }
+
 .pla-team-box.social-popup:hover .pla-social {
     opacity: 1;
     visibility: visible;
 }
+
 .pla-team-box.social-popup .pla-social:after {
     position: absolute;
     content: "";
@@ -1413,37 +1439,44 @@ Testimonial Carousel
     border-color: #f1899a transparent transparent transparent;
     transform: rotate(17deg);
 }
+
 .pla-team--left .pla-team-box {
     display: flex;
     align-items: center;
     flex-direction: row;
     text-align: left;
 }
+
 .pla-team--right .pla-team-box {
     display: flex;
     align-items: center;
     flex-direction: row-reverse;
     text-align: right;
 }
+
 .pla-team--left .pla-team-box .pla-team-header,
 .pla-team--left .pla-team-box .pla-team-desc,
 .pla-team--right .pla-team-box .pla-team-header,
-.pla-team--right .pla-team-box .pla-team-desc{
+.pla-team--right .pla-team-box .pla-team-desc {
     flex: 0 0 50%;
     max-width: 50%;
 }
+
 .pla-team--left .pla-team-box .pla-team-desc, .pla-team--right .pla-team-box .pla-team-desc {
     padding: 15px 15px;
 }
+
 .pla-team--left .pla-team-box span,
-.pla-team--right .pla-team-box span{
+.pla-team--right .pla-team-box span {
     margin-bottom: 10px;
 }
+
 .pla-team--left .pla-team-box .pla-social,
-.pla-team--right .pla-team-box .pla-social{
+.pla-team--right .pla-team-box .pla-social {
     margin: 15px 0 0;
     padding: 0;
 }
+
 .pla-team-align--center {
     text-align: center;
 }
@@ -1455,6 +1488,7 @@ Testimonial Carousel
 .pla-team-align--left {
     text-align: left;
 }
+
 .pla-team-box .pla-team-desc .carousel-name {
     text-transform: initial;
 }
@@ -1463,10 +1497,12 @@ Testimonial Carousel
 .team-carousel .slick-slide div .pla-team-box.box-overlap {
     width: auto !important;
 }
+
 .slick-slide .pla-team-box:hover {
-    box-shadow: 0 8px 20px -7px rgba(9,30,66,.3);
+    box-shadow: 0 8px 20px -7px rgba(9, 30, 66, .3);
     transform: translateY(0);
 }
+
 .box-overlap .pla-team-desc {
     position: absolute;
     left: 0;
@@ -1476,72 +1512,82 @@ Testimonial Carousel
     padding: 10px 15px;
     z-index: 1;
 }
-.box-overlap .pla-team-desc:after{
+
+.box-overlap .pla-team-desc:after {
     position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     content: '';
-    background: rgb(230,40,72);
+    background: rgb(230, 40, 72);
     z-index: -1;
 }
 
 .box-overlap.skew.middle-left .pla-team-desc:after,
 .box-overlap.skew.middle-right .pla-team-desc:after,
-.box-overlap.skew.middle-center .pla-team-desc:after{
+.box-overlap.skew.middle-center .pla-team-desc:after {
     transform: skew(-210deg);
 }
+
 .pla-team-box.box-overlap {
     position: relative;
     overflow: inherit;
     margin-top: 15px;
 }
-.box-overlap.middle-left .pla-team-desc{
+
+.box-overlap.middle-left .pla-team-desc {
     top: 50%;
     transform: translateY(-50%);
     bottom: auto;
 }
+
 .box-overlap.middle-center .pla-team-desc {
     top: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     bottom: auto;
     left: 50%;
     right: auto;
 }
 
-.box-overlap.middle-right .pla-team-desc{
+.box-overlap.middle-right .pla-team-desc {
     top: 50%;
     transform: translateY(-50%);
     bottom: auto;
     left: auto;
     right: 0;
 }
-.box-overlap.bottom-left .pla-team-desc{
+
+.box-overlap.bottom-left .pla-team-desc {
     top: auto;
     bottom: 0;
     left: 0;
     right: auto;
 }
+
 .pla-team-box.skew.bottom-left.box-overlap,
-.box-overlap.skew.middle-left .pla-team-desc{
+.box-overlap.skew.middle-left .pla-team-desc {
     left: 20px;
 }
+
 .pla-team-box.skew.bottom-right.box-overlap,
-.box-overlap.skew.middle-right .pla-team-desc{
+.box-overlap.skew.middle-right .pla-team-desc {
     right: 20px;
 }
+
 .box-overlap.skew.bottom-left .pla-team-desc:after,
 .box-overlap.skew.bottom-right .pla-team-desc:after,
-.box-overlap.skew.bottom-center .pla-team-desc:after{
+.box-overlap.skew.bottom-center .pla-team-desc:after {
     transform: skew(-210deg);
 }
-.box-overlap.bottom-center .pla-team-desc{
+
+.box-overlap.bottom-center .pla-team-desc {
     top: auto;
     bottom: 0;
     left: 50%;
     right: 0;
 }
+
 .box-overlap.bottom-center .pla-team-desc {
     top: auto;
     bottom: 0;
@@ -1549,18 +1595,21 @@ Testimonial Carousel
     right: 0;
     transform: translateX(-50%);
 }
-.box-overlap .pla-team-header{
+
+.box-overlap .pla-team-header {
     position: relative;
     overflow: hidden;
 }
+
 .box-overlap .pla-team-header .share {
     position: absolute;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
+
 .box-overlap .pla-team-header .share .toggle {
     position: absolute;
     width: 40px;
@@ -1568,7 +1617,7 @@ Testimonial Carousel
     z-index: 100;
     border-radius: 50%;
     cursor: pointer;
-    transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
 
 .box-overlap .pla-team-header .share .toggle:after {
@@ -1583,14 +1632,15 @@ Testimonial Carousel
     background: #f00;
     color: #fff;
     line-height: 40px;
-    transition: all .3s ease-in-out ;
-}
-.box-overlap .pla-team-header .share .toggle.active:after{
-    content: "\e946";
-    transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
 
-.box-overlap .pla-team-header .share .pla-social{
+.box-overlap .pla-team-header .share .toggle.active:after {
+    content: "\e946";
+    transition: all .3s ease-in-out;
+}
+
+.box-overlap .pla-team-header .share .pla-social {
     visibility: hidden;
     opacity: 0;
     position: absolute;
@@ -1602,117 +1652,26 @@ Testimonial Carousel
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
+
 .box-overlap .pla-team-header .share .pla-social.active {
     visibility: visible;
     opacity: 1;
     background: #000;
-    transition: all .3s ease-in-out ;
+    transition: all .3s ease-in-out;
 }
 
-.pla-carousel-one-area .pla-section-padding {
-    padding: 97px 0;
-}
-.pla-carousel-one-area .slick-list.draggable {
-    padding-bottom: 27px;
-}
-.pla-team-carousel-area .slick-initialized .slick-slide {
-    outline: 0;
-}
-.pla-team-box.pla-team-carousel--style-one {
-    background: #FFBB00;
-    /* width: 501px !important; */
-    margin: 0 auto;
-    border-radius: 10px;
-    padding: 23px 75px 9px;
-    position: relative;
-    z-index: 0;
-}
-.pla-team-box.pla-team-carousel--style-one:before {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: #8B8BDA;
-    z-index: -1;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-    border-bottom-left-radius: 140px;
-    border-bottom-right-radius: 10px;
-    z-index: -1;
-}
-.pla-team-box.pla-team-carousel--style-one:after {
-    position: absolute;
-    content: "";
-    bottom: -26px;
-    left: 50%;
-    width: 0;
-    height: 0;
-    border-style: solid;
-    border-width: 26px 17px 0 17px;
-    border-color: #8b8bda transparent transparent transparent;
-    transform: translateX(-50%);
-}
-.pla-team-box.pla-team-carousel--style-one .pla-team-desc h5 {
-    font-size: 20px;
-    color: #fff;
-    line-height: 24px;
-}
-.pla-team-box.pla-team-carousel--style-one .pla-team-desc h5 span {
-    font-size: 10px;
-    font-family: 'Open Sans', sans-serif;
-}
-.pla-team-box.pla-team-carousel--style-one .pla-team-desc p {
-    font-size: 14px;
-    color: #fff;
-    line-height: 19px;
-    margin-bottom: 36px;
-}
-.pla-team-box.pla-team-carousel--style-one .pla-social li a {
-    color: #DBDBFF;
-}
-.pla-team-carousel-thumb {
-    display: inline-block;
-    margin: 0 22px;
-    position: relative;
-    cursor: pointer;
-    transition: all 0.5s ease-in-out;
-}
-.pla-team-carousel-thumb.slick-slide {
-    width: 148px !important;
-    height: 148px;
-}
-.pla-team-carousel-thumb:before {
-    position: absolute;
-    content: "";
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #8B8AD9;
-    opacity: 0;
-    border-radius: 50%;
-    visibility: hidden;
-    transition: all 0.4s ease-in-out;
-}
 .pla-team-carousel-nav {
     text-align: center;
     margin: 0;
     padding: 25px 5px 0;
 }
+
 .pla-team-carousel-nav .slick-track {
     padding-top: 20px;
 }
-.pla-team-carousel-thumb.slick-slide.slick-current.slick-active.slick-center {
-    transform: translateY(-20px);
-}
-.pla-team-carousel-thumb.slick-slide.slick-current.slick-active.slick-center:before {
-    opacity: .58;
-    visibility: visible;
-}
+
 .pla-team-carousel-nav .material-icons {
     font-size: 33px;
     line-height: 30px;
@@ -1737,13 +1696,16 @@ Testimonial Carousel
     margin: 0;
     transition: all 0.3s ease-in-out;
 }
+
 .pla-team-carousel-nav button.slick-next {
     left: auto;
     right: -70px;
 }
+
 .pla-team-carousel-nav .slick-prev:before, .pla-team-carousel-nav .slick-next:before {
     display: none;
 }
+
 .pla-team-carousel-nav .slick-prev:hover, .pla-team-carousel-nav .slick-prev:focus, .pla-team-carousel-nav .slick-next:hover, .pla-team-carousel-nav .slick-next:focus {
     color: #fff;
     outline: none;
@@ -1752,7 +1714,70 @@ Testimonial Carousel
 }
 
 
+/* Card CSS*/
+.pla-card-box {
+    overflow: hidden;
+    background: #F5F5F5;
+    border-radius: 5px;
+}
+.card-title {
+    font-size: 20px;
+    color: #130317;
+}
+.card-info {
+    color: #6D6D6D;
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 0;
+}
+.pla-card-box .btn-pla {
+    color: #130317;
+    font-weight: 500;
+    font-size: 18px;
+    display: inline-block;
+    margin-top: 15px;
+}
+.pla-card-desc {
+    padding: 20px;
+}
+
+.pla-card-align--center {
+    text-align: center;
+}
+
+.pla-card-align--right {
+    text-align: right;
+}
+
+.pla-card-align--left {
+    text-align: left;
+}
 
 
 
+.pla-card--left .pla-card-box {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    text-align: left;
+}
+
+.pla-card--right .pla-card-box {
+    display: flex;
+    align-items: center;
+    flex-direction: row-reverse;
+    text-align: right;
+}
+
+.pla-card--left .pla-card-box .pla-card-figure,
+.pla-card--left .pla-card-box .pla-card-desc,
+.pla-card--right .pla-card-box .pla-card-figure,
+.pla-card--right .pla-card-box .pla-card-desc {
+    flex: 0 0 50%;
+    max-width: 50%;
+}
+
+.pla-card--left .pla-card-box .pla-card-desc, .pla-card--right .pla-card-box .pla-card-desc {
+    padding: 15px 15px;
+}
 
