--- a/wp-content/plugins/plugaddons/assets/public/css/main.css
+++ b/wp-content/plugins/plugaddons/assets/public/css/main.css
@@ -1824,6 +1824,103 @@ p.info-box-info {
 .pla-info-box-icon img {
     background: #fff;
 }
-/*.pla-info-tag--left .info-tag{*/
-/*    po*/
-/*}*/
+
+/* Pricing Table */
+.pla-pricing-box {
+    background: #E9E9F8;
+    padding: 30px 11px;
+    text-align: center;
+    border-radius: 10px;
+}
+.pla-pricing-badge {
+    position: absolute;
+    right: 0;
+    top: 0;
+    color: #fff;
+    background: #72AFFF;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.pla-pricing-header--left .pla-pricing-box .pla-pricing-header,
+.pla-pricing-price--left .pla-pricing-box .pla-pricing-price{
+    text-align: left;
+}
+.pla-pricing-header--center .pla-pricing-box .pla-pricing-header,
+.pla-pricing-price--center .pla-pricing-box .pla-pricing-price{
+    text-align: center;
+}
+.pla-pricing-header--right .pla-pricing-box .pla-pricing-header,
+.pla-pricing-price--right .pla-pricing-box .pla-pricing-price {
+
+    text-align: right;
+}
+.pla-pricing-header i {
+    font-size: 40px;
+}
+
+.pla-pricing-header h3 {
+    font-size: 20px;
+    line-height: 27px;
+    text-transform: uppercase;
+    margin: 15px 0;
+    font-weight: 700;
+    font-family: nunito;
+}
+.pla-pricing-price h3 {
+    text-transform: uppercase;
+    display: block;
+    color: #444444;
+    margin: 15px 0 0;
+    font-size: 30px;
+    line-height: 1;
+}
+.pla-pricing-period {
+    display: inline-block;
+    color: #AAA6A6;
+    font-size: 16px;
+}
+.pla-pricing-features ul.pla-pricing-features-list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+.pla-pricing-features ul.pla-pricing-features-list li{
+    color: #2F4260;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 400;
+    font-family: nunito;
+    padding: 10px 0;
+    border-bottom: 1px solid #DFDFF5;
+
+
+}
+.pla-pricing-features ul.pla-pricing-features-list li:first-child{
+    border-top: 1px solid #DFDFF5;
+}
+.pla-pricing-footer a {
+    background: #2F4260;
+    display: inline-block;
+    padding: 4px 26px;
+    border-radius: 15px;
+    color: #fff;
+    border: 1px solid #2F4260;
+    font-size: 15px;
+    line-height: 20px;
+    font-weight: 400;
+    font-family: nunito;
+    transition: all .3s ease-in-out;
+}
+
+.pla-pricing-footer {
+    margin-top: 50px;
+}
+
+.pla-pricing-footer a:hover {
+    background: transparent;
+    color: #2F4260;
+}
+
+
