--- a/wp-content/plugins/plugaddons/assets/public/css/main.css
+++ b/wp-content/plugins/plugaddons/assets/public/css/main.css
@@ -1831,14 +1831,15 @@ p.info-box-info {
     padding: 30px 11px !important;
     text-align: center;
     border-radius: 10px;
+    overflow: hidden;
 }
 .pla-pricing-badge {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 35px;
     color: #fff;
     background: #72AFFF;
-    border-radius: 5px;
+    border-radius: 5px 0 0 5px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1893,11 +1894,11 @@ p.info-box-info {
     font-weight: 400;
     font-family: nunito;
     padding: 10px 0;
-    border-bottom: 1px solid #DFDFF5;
-
-
 }
-.pla-pricing-features ul.pla-pricing-features-list li:first-child{
+.pla-pricing-features ul.pla-pricing-features-list.bordered li{
+    border-bottom: 1px solid #DFDFF5;
+}
+.pla-pricing-features ul.pla-pricing-features-list.bordered li:first-child{
     border-top: 1px solid #DFDFF5;
 }
 .pla-pricing-footer a {
